--- a/assets/css/2-home/_home-experiments.scss
+++ b/assets/css/2-home/_home-experiments.scss
@@ -60,5 +60,4 @@ $parallax-background-height: $parallax-window-height * 1.5;
 
 .btn-experiments {
   color: $btn-light;
-  margin-top: 1.6666666666666667em; // 30px
 }
