--- a/assets/css/2-home/_home-footer.scss
+++ b/assets/css/2-home/_home-footer.scss
@@ -17,5 +17,4 @@
 .btn-contact {
   color: $body-text;
   margin-bottom: 8em; // 144px
-  margin-top: 1.6666666666666667em; // 30px
 }
