--- a/assets/css/2-home/_home-works.scss
+++ b/assets/css/2-home/_home-works.scss
@@ -166,7 +166,6 @@
 .btn-alzie {
   color: $btn-light;
   justify-content: flex-start;
-  margin-top: 1.6666666666666667em; // 30px
   padding: 0;
 
   @media only screen
@@ -312,7 +311,6 @@
 .btn-ibeam {
   color: $btn-dark;
   justify-content: flex-start;
-  margin-top: 1.6666666666666667em; // 30px
   padding: 0;
 
   @media only screen
@@ -439,7 +437,6 @@
 
   .btn-codebuddies {
     color: $btn-dark;
-    margin-top: 1.6666666666666667em; // 30px
   }
 
   .btn-codebuddies:hover {
@@ -507,7 +504,6 @@
 
   .btn-odin {
     color: $btn-dark;
-    margin-top: 1.6666666666666667em; // 30px
   }
 
   .btn-odin:hover {
